# filterbenchmark

./: .gitignore  README.md
ACORN/: .gitignore  CMakeLists.txt
ACORN/UNG/include/: config.h  distance.h  filtered_bruteforce.h  graph.h  label_nav_graph.h  search_cache.h  search_queue.h  storage.h  trie.h  uni_nav_graph.h  utils.h  vamana.h  visited_set.h
ACORN/UNG/src/: distance.cpp  filtered_bruteforce.cpp  search_queue.cpp  storage.cpp  trie.cpp  uni_nav_graph.cpp  utils.cpp  vamana.cpp
ACORN/bash/: build_representative_graphs_1.py  build_representative_graphs_gamma.py  build_vary_base_1.py  build_vary_base_gamma.py  combine_search_result.py  combine_search_result_1.py  convert_gt.py  search_NHQ_exp_1.py  search_NHQ_exp_gamma.py  search_acorn_test.py  search_base_exp_1.py  search_base_exp_gamma.py  search_basic_exp_1.py  search_basic_exp_gamma.py  search_in_subspace.py  search_query_length_1.py  search_query_length_gamma.py  search_recall_exp_1.py  search_recall_exp_gamma.py  search_selectivity_exp_1.py  search_selectivity_exp_gamma.py  select_representative_1.py  select_representative_gamma.py  test_build.py  test_search.py  traverse_param_space.py
ACORN/demos/: CMakeLists.txt  build_1_index.cpp  build_acorn_index.cpp  build_gamma_index.cpp  parse_file.cpp  search_acorn_index.cpp  search_acorn_index_parse.cpp  test_acorn.cpp  test_containment.cpp  test_distribution.cpp  test_multilabel.cpp  test_overlap.cpp  test_parse.cpp  test_parse_containment.cpp  test_sel.cpp  utils.cpp
ACORN/faiss/: IndexACORN.cpp
CAPS/: Makefile  README.md  getGT-filterSearch.py
CAPS/bash/: build_index.py  search_index.py
CAPS/include/: utils.h
CAPS/include/bliss/: query.py
CAPS/src/: FilterIndexHamming.cpp  FilterIndexHammingThNprobe.cpp  index.cpp  query.cpp  readfile.cpp  utils.cpp
NHQ/NHQ/NHQ-NPG_kgraph/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  sift_label_label_file
NHQ/NHQ/NHQ-NPG_kgraph/bash/: build_NHQ_graphs.py  search_NHQ_graphs.py
NHQ/NHQ/NHQ-NPG_kgraph/src/: Makefile  cmake_install.cmake  index_graph.cpp
NHQ/NHQ/NHQ-NPG_kgraph/tests/: CMakeLists.txt  Makefile  cmake_install.cmake  test_dng_index  test_dng_index.cpp  test_dng_optimized_search.cpp
NHQ/NHQ/parameters/: README.md
data/: description.md  label_base_small.txt  words_query_and.fvecs  words_query_and.txt
data/words/: words_query_or.fvecs  words_query_or.txt
faiss/bash_post_IVFPQ/: build_representative_graphs.py  build_vary_base.py  combine_search_result.py  search_NHQ_exp.py  search_base_exp.py  search_basic_exp.py  search_query_length.py  search_recall_exp.py  search_selectivity_exp.py  test_search_query_length.py  traverse_param_space.py
faiss/bash_post_hnsw/: build_NHQ_graphs.py  build_representative_graphs.py  build_vary_base.py  combine_search_result.py  search_NHQ_exp.py  search_base_exp.py  search_basic_exp.py  search_in_subspace.py  search_query_length.py  search_recall_exp.py  search_selectivity_exp.py  select_representative.py  test_search_query_length.py  test_search_query_length_prefilter.py  traverse_param_space.py
faiss/tutorial/cpp/: CMakeLists.txt  build_HNSW_index.cpp  build_IVFPQ_index.cpp  search_HNSW_index.cpp  search_IVFPQ_index.cpp
